添加了普通用户页面、村委会用户页面、管理员用户页面，以及细节更新。

--- a/src/main/webapp/WEB-INF/welcome.html
+++ b/src/main/webapp/WEB-INF/welcome.html
@@ -21,14 +21,16 @@
 				建设关键技术研究”的重要内容之一。本课题将开展农村生活垃圾分类收集与转运技术；因地制宜的农村有机垃圾生物处理与资源化利用
 				技术；宜居社区人文环境建设和整治技术；宜居社区自然生态环境保护与建设技术；宜居社区景观营造技术等方面内容的研究工作，本课
 				题研究成果将结合示范试点，进行推广应用,谢谢您的支持。</div>
-			<div class="home">
-				<a href="initsu">继续</a>
-			</div>
 		</div>
 	</div>
+
 	<div id="footer">
-		Copyright &copy; 2014.<a target="_blank"
-			href="https:github.com/alexmaven">Alex</a>. All rights reserved.
+		<a href="initsu">普通居民入口</a>&nbsp&nbsp
+		<a href="initsp">村委会用户入口</a>&nbsp&nbsp
+		<a href="login">管理员入口</a>&nbsp&nbsp
+		<br><br>
+		Copyright &copy; 2014.
+		<a target="_blank" href="https:github.com/alexmaven">Alex</a>. All rights reserved.
 	</div>
 </body>
 </html>
